--- a/Layouts/Credits.xml
+++ b/Layouts/Credits.xml
@@ -169,7 +169,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite2" uid="2345">
+                <instance type="backButton2" uid="2345">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
