--- a/Layouts/Level 3.xml
+++ b/Layouts/Level 3.xml
@@ -2053,7 +2053,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite" uid="2347">
+                <instance type="arrow" uid="2347">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
@@ -2075,7 +2075,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite3" uid="2348">
+                <instance type="evolDecal" uid="2348">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
